   handles changed to 48 (previously 32). Added JemmExL.exe, still supporting
   XMS v3.0 only. 
 - JemmEx: return DX=0 if XMS alloc functions fail (XMS spec).
 - option I=TEST does now indeed what's documented. Previously it only
   scanned regions of "external" ROMs ( i.e., the ROM of the VGA card ).
   This means it's more "aggressive" now.

 02/02/2020: v5.79
 - if physical address of DMA buffer was beyond 16M, its size was reset
   to zero. This is no longer done.
 - default linker is now JWlink.
 - debug displays added for mode switch calls.
 - Jemm will now use info returned by Int 15h, ax=E820h to mark regions
   in the upper memory area as reserved. If the call was successful,
   Jemm won't scan the memory region C000-EFFF for RAM.
 - VME (virtual mode extensions) is now off by default; there exist CPUs
   that claim to support VME but actually don't.
 - JemmEx's built-in XMS host will now use up to 8 memory blocks listed
   by ACPI (int 0x15, ax=0xe820). Previously it could just use the one
   with base address 0x100000. 
 - fixed: shrinking an EMB didn't work correctly.

 07/15/2012: v5.78

 - bugfix: if SPLIT option was set and there were 2 ROMs to be split on
   adjacent 4K-pages, the latter one may have been overwritten with zeros
   (problem found in Qemu v0.15.1).
 - bugfix: MOVEXBDA didn't restore the XBDA at reboot. This may have been
   a problem if the FASTBOOT option was active.
 - a warning is displayed if the page frame isn't set to a segment address
   divisible by 0x400 without remainder ( i.e, FRAME=DF00 will trigger the
   warning ).
 - MEMSTAT additionally displays location and size of XBDA.
 - source package only: extrsect.exe replaced by bin2inc.exe; bin2inc.exe
   is needed only if Masm is used to assemble the source.

 06/20/2012: v5.77

 - commandline option I=A000-B7FF didn't increase DOS low memory, the
   region became just the first UMB.
 - tool MOVEXBDA added.

 05/25/2012: v5.76
